[gd_scene load_steps=2 format=3 uid="uid://dgxv6tu14yia"]

[ext_resource type="Script" path="res://main.gd" id="1_5hadj"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5hadj")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = " Player Name "

[node name="PanelContainer2" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = " John Doe "

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
text = " Player HP "

[node name="PanelContainer2" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2
text = "100"

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer6"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/VBoxContainer/HBoxContainer6/PanelContainer"]
layout_mode = 2
text = "Login"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/VBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
text = "Update Player"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/VBoxContainer/HBoxContainer4/PanelContainer"]
layout_mode = 2
text = "Damage Player"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
fit_content = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer6/PanelContainer/Button" to="." method="_on_Login_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer3/PanelContainer/Button" to="." method="_on_Update_player_button_down"]
[connection signal="button_down" from="Control/VBoxContainer/HBoxContainer4/PanelContainer/Button" to="." method="_on_Damage_player_button_down"]
